--- a/accounting-ui/plugin.xml
+++ b/accounting-ui/plugin.xml
@@ -896,6 +896,11 @@
             name="%command.reports.letterhead">
       </command>
       <command
+            defaultHandler="de.tfsw.accounting.ui.user.ReferencesExportHandler"
+            id="de.tfsw.accounting.ui.user.ReferencesExport"
+            name="References">
+      </command>
+      <command
             categoryId="de.tfsw.accounting.ui.expense"
             defaultHandler="de.tfsw.accounting.ui.expense.ExportExpensesReportHandler"
             id="de.tfsw.accounting.ui.expense.ExportExpensesReport"
@@ -1343,6 +1348,11 @@
             commandId="de.tfsw.accounting.ui.reports.LetterheadExport"
             icon="icons/page_white_text.png"
             reportId="de.tfsw.accounting.reporting.Letterhead">
+      </reportHandler>
+      <reportHandler
+            commandId="de.tfsw.accounting.ui.user.ReferencesExport"
+            icon="icons/page_white_text.png"
+            reportId="de.tfsw.accounting.reporting.References">
       </reportHandler>
    </extension>
 </plugin>
