--- a/accounting-ui/plugin.xml
+++ b/accounting-ui/plugin.xml
@@ -959,7 +959,7 @@
       </wizard>
       <wizard
             category="de.tfsw.accounting.ui.wizard"
-            class="de.tfsw.accounting.ui.user.TaxRateWizard"
+            class="de.tfsw.accounting.ui.user.NewTaxRateWizard"
             icon="icons/cog_add.png"
             id="de.tfsw.accounting.ui.wizard.NewTaxRateWizard"
             name="%new.taxRate.wizard.label">
