--- a/accounting-parent/pom.xml
+++ b/accounting-parent/pom.xml
@@ -14,6 +14,7 @@
 	<modules>
 		<module>../accounting-core</module>
 		<module>../accounting-core-tests</module>
+		<module>../accounting-elster</module>
 		<module>../accounting-help</module>
 		<module>../accounting-product</module>
 		<module>../accounting-reporting</module>
