--- a/accounting-reporting/build.properties
+++ b/accounting-reporting/build.properties
@@ -1,15 +1,14 @@
-source.. = src/
-output.. = bin/
-generateFeatureVersionSuffix=true
+output.. = target/classes/
 bin.includes = META-INF/,\
                .,\
                lib/,\
                reports/,\
-               OSGI-INF/l10n/,\
-               OSGI-INF/,\
                plugin.xml,\
-               schema/
+               schema/,\
+               OSGI-INF/
+generateFeatureVersionSuffix = true
 src.includes = schema/,\
                reports/,\
                lib/,\
-               build.xml,\
+               build.xml
+source.. = src/
