--- a/accounting-ui/build.properties
+++ b/accounting-ui/build.properties
@@ -1,11 +1,11 @@
-source.. = src/
-output.. = bin/
-generateFeatureVersionSuffix=true
+output.. = target/classes/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
                splash.bmp,\
                OSGI-INF/l10n/bundle.properties,\
-               OSGI-INF/
-               
+               OSGI-INF/,\
+               OSGI-INF/reportingServiceComponent.xml
+generateFeatureVersionSuffix = true
+source.. = src/
