switched to own icons fixed build.properties to include binary artifacts previously missing

--- a/accounting-elster/build.properties
+++ b/accounting-elster/build.properties
@@ -2,5 +2,7 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               OSGI-INF/component.xml
+               OSGI-INF/,\
+               icons/,\
+               elster-schema/
 source.. = src/
