--- a/accounting-ui/build.properties
+++ b/accounting-ui/build.properties
@@ -4,8 +4,8 @@ bin.includes = plugin.xml,\
                .,\
                icons/,\
                splash.bmp,\
-               OSGI-INF/l10n/bundle.properties,\
+               aboutimage.png,\
                OSGI-INF/,\
-               OSGI-INF/reportingServiceComponent.xml
+               schema/
 generateFeatureVersionSuffix = true
 source.. = src/
