--- a/accounting-parent/pom.xml
+++ b/accounting-parent/pom.xml
@@ -45,6 +45,7 @@
 				<artifactId>target-platform-configuration</artifactId>
 				<version>${tycho.version}</version>
 				<configuration>
+					<resolver>p2</resolver>
 					<environments>
 						<environment>
 							<os>linux</os>
