--- a/accounting-core-tests/build.properties
+++ b/accounting-core-tests/build.properties
@@ -1,5 +1,5 @@
 source.. = src/
-output.. = bin/
+output.. = target/classes/
 bin.includes = META-INF/,\
                .,\
                lib/easymock-3.2.jar,\
