--- a/accounting-core/build.properties
+++ b/accounting-core/build.properties
@@ -1,5 +1,5 @@
 source.. = src/
-output.. = bin/
+output.. = target/classes/
 generateFeatureVersionSuffix=true
 bin.includes = META-INF/,\
                .,\
