--- a/accounting-core-tests/build.properties
+++ b/accounting-core-tests/build.properties
@@ -1,8 +1,8 @@
 source.. = src/
 output.. = target/classes/
 bin.includes = META-INF/,\
-               .,\
-               lib/easymock-3.2.jar,\
-               lib/objenesis-1.2.jar,\
-               lib/cglib-nodep-2.2.jar,\
-               fragment.xml
+               XmlMappingTestFile.xml,\
+               ExpenseImportTestData.csv,\
+               ExpenseImportTestData_customDate.csv,\
+               .\
+
