xml file index moved to constants i18n

--- a/accounting-ui/build.properties
+++ b/accounting-ui/build.properties
@@ -6,6 +6,7 @@ bin.includes = plugin.xml,\
                splash.bmp,\
                aboutimage.png,\
                OSGI-INF/,\
-               schema/
+               schema/,\
+               OSGI-INF/l10n/bundle.properties
 generateFeatureVersionSuffix = true
 source.. = src/
