--- a/accounting-elster/build.properties
+++ b/accounting-elster/build.properties
@@ -2,7 +2,7 @@ output.. = target/classes
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               OSGI-INF/,\
                icons/,\
-               elster-schema/
+               elster-schema/,\
+               OSGI-INF/
 source.. = src/
