--- a/accounting-parent/pom.xml
+++ b/accounting-parent/pom.xml
@@ -49,7 +49,7 @@
 				<configuration>
 					<resolver>p2</resolver>
 					<environments>
-						<!-- environment>
+						<environment>
 							<os>linux</os>
 							<ws>gtk</ws>
 							<arch>x86</arch>
@@ -63,7 +63,7 @@
 							<os>win32</os>
 							<ws>win32</ws>
 							<arch>x86</arch>
-						</environment-->
+						</environment>
 						<environment>
 							<os>win32</os>
 							<ws>win32</ws>
