added readme, license and notice files throughout

--- a/accounting-core-tests/build.properties
+++ b/accounting-core-tests/build.properties
@@ -4,5 +4,7 @@ bin.includes = META-INF/,\
                XmlMappingTestFile.xml,\
                ExpenseImportTestData.csv,\
                ExpenseImportTestData_customDate.csv,\
-               .\
+               .,\
+               LICENSE.txt,\
+               README.txt
 
