--- a/accounting-core/build.properties
+++ b/accounting-core/build.properties
@@ -5,4 +5,7 @@ bin.includes = META-INF/,\
                .,\
                lib/log4j-1.2.13.jar,\
                lib/commons-beanutils-1.8.3.jar,\
-               lib/commons-logging-1.1.jar
+               lib/commons-logging-1.1.jar,\
+               LICENSE.txt,\
+               NOTICE.txt,\
+               README.txt
