--- a/db4o_osgi/build.properties
+++ b/db4o_osgi/build.properties
@@ -1,4 +1,7 @@
 source.. = src/
 bin.includes = META-INF/,\
                .,\
-               lib/
+               lib/,\
+               README.txt,\
+               NOTICE.txt,\
+               db4o.license.html
