--- a/accounting-test-harness/build.properties
+++ b/accounting-test-harness/build.properties
@@ -2,7 +2,7 @@ source.. = src/
 output.. = target/classes/
 bin.includes = META-INF/,\
                .,\
-               lib/,\
-               lib/cglib-nodep-2.2.jar,\
-               lib/easymock-3.2.jar,\
-               lib/objenesis-1.2.jar
+               LICENSE.txt,\
+               NOTICE.txt,\
+               README.txt,\
+               lib/
