--- a/accounting-ui/build.properties
+++ b/accounting-ui/build.properties
@@ -5,8 +5,10 @@ bin.includes = plugin.xml,\
                icons/,\
                splash.bmp,\
                aboutimage.png,\
-               OSGI-INF/,\
                schema/,\
-               OSGI-INF/l10n/bundle.properties
+               README.txt,\
+               OSGI-INF/,\
+               NOTICE.txt,\
+               LICENSE.txt
 generateFeatureVersionSuffix = true
 source.. = src/
