removed servlet-api from classpath and lib folder and replaced it with a plugin dependency

--- a/accounting-reporting/build.properties
+++ b/accounting-reporting/build.properties
@@ -5,7 +5,10 @@ bin.includes = META-INF/,\
                reports/,\
                plugin.xml,\
                schema/,\
-               OSGI-INF/
+               OSGI-INF/,\
+               LICENSE.txt,\
+               NOTICE.txt,\
+               README.txt
 generateFeatureVersionSuffix = true
 src.includes = schema/,\
                reports/,\
