--- a/accounting-product/pom.xml
+++ b/accounting-product/pom.xml
@@ -7,8 +7,12 @@
 		<relativePath>../accounting-parent</relativePath>
 	</parent>
 	<artifactId>de.tfsw.accounting.product</artifactId>
-	<version>1.2.0-SNAPSHOT</version>
+	<version>1.3.1</version>
 	<packaging>eclipse-repository</packaging>
+
+	<properties>
+		<accounting.product.id>accounting</accounting.product.id>
+	</properties>
 
 	<build>
 		<plugins>
@@ -30,14 +34,31 @@
 						<goals>
 							<goal>materialize-products</goal>
 						</goals>
+						<configuration>
+							<products>
+								<product>
+									<id>${accounting.product.id}</id>
+									<rootFolder>${accounting.product.id}</rootFolder>
+								</product>
+							</products>
+						</configuration>						
 					</execution>
 					<execution>
 						<id>archive-products</id>
 						<goals>
 							<goal>archive-products</goal>
 						</goals>
+						<configuration>
+							<products>
+								<product>
+									<id>${accounting.product.id}</id>
+									<archiveFileName>${accounting.product.id}-${project.version}</archiveFileName>
+								</product>
+							</products>
+						</configuration>
 					</execution>
 				</executions>
+
 			</plugin>
 		</plugins>
 	</build>
