--- a/accounting-parent/pom.xml
+++ b/accounting-parent/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.tfsw.accounting</groupId>
 	<artifactId>de.tfsw.accounting.parent</artifactId>
-	<version>1.1.0-SNAPSHOT</version>
+	<version>1.1.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<properties>
@@ -18,7 +18,9 @@
 		<module>../accounting-elster-core-test</module>
 		<module>../accounting-elster-adapters</module>
 		<module>../accounting-elster-adapters-test</module>
-		<module>../accounting-elster-ui</module>		
+		<module>../accounting-elster-feature</module>
+		<module>../accounting-elster-ui</module>
+		<module>../accounting-feature</module>
 		<module>../accounting-help</module>
 		<module>../accounting-product</module>
 		<module>../accounting-reporting</module>
