--- a/accounting-feature/build.properties
+++ b/accounting-feature/build.properties
@@ -1,3 +1,5 @@
 bin.includes = feature.xml,\
                feature.properties,\
                license.html
+
+root = file:license.html, file:README.txt, file:NOTICE.txt
