--- a/accounting-product/pom.xml
+++ b/accounting-product/pom.xml
@@ -7,7 +7,7 @@
 		<relativePath>../accounting-parent</relativePath>
 	</parent>
 	<artifactId>de.tfsw.accounting.product</artifactId>
-	<version>1.3.2</version>
+	<version>1.3.3</version>
 	<packaging>eclipse-repository</packaging>
 
 	<properties>
@@ -22,6 +22,11 @@
 				<version>${tycho.version}</version>
 				<configuration>
 					<includeAllDependencies>true</includeAllDependencies>
+					<formats>
+						<win32>zip</win32>
+						<linux>tar.gz</linux>
+						<macosx>tar.gz</macosx>
+					</formats>
 				</configuration>
 			</plugin>
 			<plugin>
