Wizard for recurring expenses added

--- a/accounting-ui/plugin.xml
+++ b/accounting-ui/plugin.xml
@@ -970,6 +970,12 @@
             id="de.tfsw.accounting.ui.wizard.NewTaxRateWizard"
             name="%new.taxRate.wizard.label">
       </wizard>
+      <wizard
+            category="de.tfsw.accounting.ui.wizard"
+            class="de.tfsw.accounting.ui.expense.recurring.RecurringExpenseWizard"
+            id="de.tfsw.accounting.ui.expense.recurring.RecurringExpenseWizard"
+            name="Recurring Expense">
+      </wizard>
    </extension>
    <extension
          point="org.eclipse.ui.splashHandlers">
