AccountingService now using declarative services

--- a/accounting-core/build.properties
+++ b/accounting-core/build.properties
@@ -8,4 +8,5 @@ bin.includes = META-INF/,\
                lib/commons-logging-1.1.jar,\
                LICENSE.txt,\
                NOTICE.txt,\
-               README.txt
+               README.txt,\
+               OSGI-INF/
