--- a/accounting-ui/plugin.xml
+++ b/accounting-ui/plugin.xml
@@ -41,7 +41,7 @@
          </property>
          <property
                name="windowImages"
-               value="icons/accounting_16.png,icons/accounting_32.png">
+               value="icons/accounting_16.png,icons/accounting_32.png,icons/accounting_48.png,icons/accounting_64.png,icons/accounting_128.png,icons/accounting_256.png">
          </property>
          <property
                name="startupForegroundColor"
