Updated Gson to v2.6.2

--- a/com.google.gson/build.properties
+++ b/com.google.gson/build.properties
@@ -2,4 +2,4 @@ bin.includes = META-INF/,\
                .,\
                about.html,\
                plugin.properties,\
-               com.google.gson_2.2.4.v201311231704.jar
+               gson-2.6.2.jar
