--- a/com.google.gson/pom.xml
+++ b/com.google.gson/pom.xml
@@ -10,5 +10,5 @@
   
   <packaging>eclipse-plugin</packaging>
   <artifactId>com.google.gson</artifactId>
-  <version>2.2.4.v201311231704</version>
+  <version>2.6.2</version>
 </project>
