--- a/accounting-parent/pom.xml
+++ b/accounting-parent/pom.xml
@@ -22,6 +22,7 @@
 		<module>../accounting-elster-ui</module>
 		<module>../accounting-feature</module>
 		<module>../accounting-help</module>
+		<module>../accounting-logging</module>
 		<module>../accounting-product</module>
 		<module>../accounting-reporting</module>
 		<module>../accounting-test-harness</module>
