--- a/accounting-logging/build.properties
+++ b/accounting-logging/build.properties
@@ -1,4 +1,8 @@
 bin.includes = META-INF/,\
+			   .,\
                log4j-api-2.5.jar,\
                log4j-core-2.5.jar,\
-               log4j2.xml
+               log4j2.xml,\
+               NOTICE.txt,\
+               README.txt,\
+               LICENSE.txt
