complete switch to log4j2

--- a/accounting-parent/pom.xml
+++ b/accounting-parent/pom.xml
@@ -47,7 +47,14 @@
 				<version>${tycho.version}</version>
 				<extensions>true</extensions>
 			</plugin>
-
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-surefire-plugin</artifactId>
+				<version>${tycho.version}</version>
+				<configuration>
+					<argLine>-Dlog4j.configurationFile=${basedir}/../accounting-parent/log4j2-build.xml -Daccounting.log.path=${project.build.directory}</argLine>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>target-platform-configuration</artifactId>
