--- a/accounting-help/pom.xml
+++ b/accounting-help/pom.xml
@@ -6,6 +6,8 @@
   	<version>1.3.0-SNAPSHOT</version>
   	<relativePath>../accounting-parent</relativePath>
   </parent>
+  
   <artifactId>de.tfsw.accounting.help</artifactId>
+  <version>1.2.0-SNAPSHOT</version>
   <packaging>eclipse-plugin</packaging>
 </project>
