--- a/accounting-ui-e4/plugin.xml
+++ b/accounting-ui-e4/plugin.xml
@@ -10,7 +10,7 @@
             application="org.eclipse.e4.ui.workbench.swt.E4Application">
          <property
                name="lifeCycleURI"
-               value="bundleclass://de.tfsw.accounting.ui.e4/de.tfsw.accounting.ui.AccountingE4UILifeCycle">
+               value="bundleclass://de.tfsw.accounting.ui/de.tfsw.accounting.ui.AccountingE4UILifeCycle">
          </property>
          <property
                name="appName"
@@ -27,22 +27,6 @@
          <property
                name="windowImages"
                value="icons/accounting_16.png,icons/accounting_32.png,icons/accounting_48.png,icons/accounting_64.png,icons/accounting_128.png,icons/accounting_256.png">
-         </property>
-         <property
-               name="startupForegroundColor"
-               value="000000">
-         </property>
-         <property
-               name="startupMessageRect"
-               value="7,10,440,20">
-         </property>
-         <property
-               name="startupProgressRect"
-               value="0,280,465,15">
-         </property>
-         <property
-               name="preferenceCustomization"
-               value="plugin_customization.ini">
          </property>
       </product>
    </extension>
