--- a/accounting-api/pom.xml
+++ b/accounting-api/pom.xml
@@ -8,8 +8,7 @@
   	<relativePath>../accounting-parent</relativePath>
   </parent>
   
-  <artifactId>de.tfsw.accounting.elster.core.test</artifactId>
-  <version>1.1.1-SNAPSHOT</version>
-  <packaging>eclipse-test-plugin</packaging>
-  <name>Accounting ELSTER Core Test</name>
+  <artifactId>de.tfsw.accounting.api</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
+  <packaging>eclipse-plugin</packaging>
 </project>
