--- a/accounting-parent/pom.xml
+++ b/accounting-parent/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.tfsw.accounting</groupId>
 	<artifactId>de.tfsw.accounting.parent</artifactId>
-	<version>1.3.0-SNAPSHOT</version>
+	<version>1.4.0</version>
 	<packaging>pom</packaging>
 
 	<properties>
@@ -14,6 +14,7 @@
 	</properties>
 
 	<modules>
+		<module>../accounting-api</module>
 		<module>../accounting-core</module>
 		<module>../accounting-core-tests</module>
 		<module>../accounting-elster-core</module>
@@ -62,6 +63,11 @@
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>target-platform-configuration</artifactId>
 				<version>${tycho.version}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-versions-plugin</artifactId>
+				<version>1.2.0</version>
 			</plugin>
 		</plugins>
 	</build>
