--- a/accounting-ui-e4/build.properties
+++ b/accounting-ui-e4/build.properties
@@ -5,4 +5,7 @@ bin.includes = plugin.xml,\
                .,\
                icons/,\
                css/default.css,\
-               Application.e4xmi
+               Application.e4xmi,\
+               splash.bmp,\
+               aboutimage.png,\
+               OSGI-INF/
