--- a/accounting-ui-e4/plugin.xml
+++ b/accounting-ui-e4/plugin.xml
@@ -28,6 +28,10 @@
                name="windowImages"
                value="icons/accounting_16.png,icons/accounting_32.png,icons/accounting_48.png,icons/accounting_64.png,icons/accounting_128.png,icons/accounting_256.png">
          </property>
+         <property
+               name="applicationCSS"
+               value="platform:/plugin/de.tfsw.accounting.ui/css/default.css">
+         </property>
       </product>
    </extension>
 
