added mockito (and hamcrest) to test-harness module

--- a/accounting-test-harness/build.properties
+++ b/accounting-test-harness/build.properties
@@ -3,4 +3,6 @@ bin.includes = META-INF/,\
                LICENSE.txt,\
                NOTICE.txt,\
                README.txt,\
-               lib/
+               lib/,\
+               lib/mockito-core-1.9.5.jar,\
+               lib/hamcrest-core-1.1.jar
